kuber-homeworks/3.4/files/Deployment2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-app1-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx-app1
  template:
    metadata:
      labels:
        app: nginx-app1
    spec:
      containers:
      - name: nginx
        image: nginx:1.19
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-app1-config
          mountPath: /usr/share/nginx/html
      volumes:
      - name: nginx-app1-config
        configMap:
          name: nginx-app1-config
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-app2-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx-app2
  template:
    metadata:
      labels:
        app: nginx-app2
    spec:
      containers:
      - name: nginx
        image: nginx:1.20
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-app2-config
          mountPath: /usr/share/nginx/html
      volumes:
      - name: nginx-app2-config
        configMap:
          name: nginx-app2-config
