kuber-homeworks/3.4/files/Service2.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-app1-svc
spec:
  selector:
    app: nginx-app1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-app2-svc
spec:
  selector:
    app: nginx-app2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
